# c-libp2p

./: .gitignore  CMakeLists.txt  README.md  install-deps.sh
.github/workflows/: ci.yml  interop.yml
cmake/: FindLibsodium.cmake  FindLibuv.cmake  FindNgtcp2.cmake  FindProtobufC.cmake
examples/: chat.c  echo_client.c  echo_server.c  ping_peer.c
include/libp2p/: connection.h  crypto.h  errors.h  host.h  libp2p.h  multiaddr.h  peerstore.h  protocol.h  stream.h  types.h
interop/: Dockerfile.c-libp2p  Dockerfile.go-libp2p  docker-compose.yml  test_interop.sh
interop/go-libp2p/: go.mod  go.sum  main.go
proto/: identify.proto  noise.proto
src/: connection.c  connection_internal.h  connmgr.c  connmgr_internal.h  dialer.c  dialer.h  errors.c  host.c  host_internal.h  listener.c  multiaddr.c  stream.c
src/crypto/: keypair_internal.h  peer_id.c  public_key.c
src/encoding/: cid.h  multicodec.h  multihash.c  multihash.h  varint.c
src/mux/yamux/: yamux.c  yamux_internal.h
src/protocol/: identify.c  multistream.c  multistream.h  ping.c  ping_internal.h
src/security/: security.h
src/security/noise/: noise_internal.h  noise_keys.c  noise_transport.c
src/src/: connection.c  connection_internal.h  connmgr.c  connmgr_internal.h  dialer.c  host.c  listener.h  peerstore.c  peerstore_internal.h  protocol_router.c  protocol_router.h  stream.c  stream_internal.h
src/src/crypto/: keypair.c  peer_id.c
src/src/encoding/: cid.c  multibase.c  multibase.h  multicodec.c  varint.h
src/src/mux/: mux.h
src/src/mux/yamux/: yamux.c  yamux_internal.h
src/src/protocol/: identify.c  identify_internal.h  multistream.c
src/src/security/noise/: noise_handshake.c
src/src/transport/: dns_resolver.c  dns_resolver.h  transport.h
src/src/transport/tcp/: tcp_transport.c
src/src/util/: buffer.c  list.c  map.c
src/transport/: transport.h
src/transport/quic/: quic_tls.h  quic_transport.c  quic_transport.h
src/transport/tcp/: tcp_transport.c  tcp_transport.h
src/util/: buffer.h  list.h  map.h
tests/: test_custom_protocol.c  test_identify.c  test_identify_push.c  test_integration.c  test_multiaddr.c  test_multistream.c  test_noise.c  test_peer_id.c  test_peer_id_text.c  test_peerstore.c  test_ping.c  test_quic_transport.c  test_remote_keys.c  test_tcp_transport.c  test_varint.c  test_yamux.c
